@@ -19,8 +19,7 @@ plotDeltaDistribution(
 )
 }
 \arguments{
-\item{results}{A \linkS4class{DataFrame} containing the output from \code{\link{SingleR}}, 
-\code{\link{classifySingleR}}, \code{\link{combineCommonResults}}, or \code{\link{combineRecomputedResults}}.}
+\item{results}{A \linkS4class{DataFrame} containing the output from \code{\link{SingleR}}, \code{\link{classifySingleR}}, or \code{\link{combineRecomputedResults}}.}
 
 \item{show}{String specifying whether to show the difference from the median (\code{"delta.med"}) 
 or the difference from the next-best score (\code{"delta.next"}).}
