@@ -32,8 +32,7 @@ plotScoreHeatmap(
 )
 }
 \arguments{
-\item{results}{A \linkS4class{DataFrame} containing the output from \code{\link{SingleR}},
-\code{\link{classifySingleR}}, \code{\link{combineCommonResults}}, or \code{\link{combineRecomputedResults}}.}
+\item{results}{A \linkS4class{DataFrame} containing the output from \code{\link{SingleR}}, \code{\link{classifySingleR}}, or \code{\link{combineRecomputedResults}}.}
 
 \item{cells.use}{Integer or string vector specifying the single cells (i.e., rows of \code{results}) to show.
 If \code{NULL}, all cells are shown.}
